import ModernRIBs
import UIKit
import SnapKit

protocol FinanceHomePresentableListener: AnyObject {
  
}

final class FinanceHomeViewController: UIViewController, FinanceHomePresentable, FinanceHomeViewControllable {
    
    weak var listener: FinanceHomePresentableListener?
    
    private let stackView: UIStackView = {
        let stackView = UIStackView()
        stackView.translatesAutoresizingMaskIntoConstraints = false
        stackView.axis = .vertical
        stackView.alignment = .fill
        stackView.distribution = .equalSpacing
        stackView.spacing = 4
        return stackView
    }()
    
    init() {
        super.init(nibName: nil, bundle: nil)
        
        layout()
    }
    
    required init?(coder: NSCoder) {
        super.init(coder: coder)
        
        layout()
    }
    
    
    func layout() {
        view.backgroundColor = .white
        title = "슈퍼페이"
        
        tabBarItem = UITabBarItem(title: "슈퍼페이", image: UIImage(systemName: "creditcard"), selectedImage: UIImage(systemName: "creditcard.fill"))
        tabBarItem.accessibilityIdentifier = "superpay_home_tab_bar_item"
        
        view.backgroundColor = .white
        view.addSubview(stackView)
        
        stackView.snp.makeConstraints{
            $0.top.leading.trailing.equalToSuperview()
        }
    }    
}

extension FinanceHomeViewController {
    func addDashboard(_ view: any ViewControllable) {
        let vc = view.uiviewController
        addChild(vc)
        stackView.addArrangedSubview(vc.view)
        vc.didMove(toParent: self) //뷰컨 라이프 사이클 유지 가능. 
    }
}
