...
    let textField = UITextField()
    textField.translatesAutoresizingMaskIntoConstraints = false
    textField.borderStyle = .none
    textField.font = UIFont.systemFont(ofSize: 18, weight: .semibold)
    textField.textAlignment = .right
    textField.keyboardType = .numberPad
      textField.accessibilityIdentifier = "topup_enteramount_textField"
    return textField
  }()
  
  private let currencyLabel: UILabel = {
    let label = UILabel()
    label.translatesAutoresizingMaskIntoConstraints = false
...
